--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ body {
     line-height: 1em;
     -webkit-border-radius: 8px;
     border-radius: 8px;
+    transition: background-color 0.5s ease-out;
 }
 
 .product-preview .button::before {
