--- a/css/style.css
+++ b/css/style.css
@@ -112,9 +112,14 @@ body {
     position: relative;
     top: 3px;
 }
-.product-preview .button:hover { 
-    background-color: var(--darker-cyan);
+
+/* :hover only for devices with hover */
+@media (hover: hover) and (pointer: fine) {
+    .product-preview .button:hover { 
+        background-color: var(--darker-cyan);
+    }
 }
+
 
 /* styles for desctop */
 @media only screen and (min-width: 768px) {
